--- a/data_cleaning/FIFA _rating_cleaning.ipynb
+++ b/data_cleaning/FIFA _rating_cleaning.ipynb
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "aff7ba94",
+   "id": "5e7d7b31",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "de7af9e5",
+   "id": "f25e08a9",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "5a36fd0e",
+   "id": "98c3c3f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "f0999cc6",
+   "id": "7752f1a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "dc70d1f1",
+   "id": "15f01ea9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "762c2fe3",
+   "id": "e33b4937",
    "metadata": {},
    "source": [
     "### Check what players were added or removed"
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "5faa6981",
+   "id": "f554c906",
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1284,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "b30b843b",
+   "id": "89eb9c02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,7 +1294,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "07319db1",
+   "id": "7e858e41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1304,7 +1304,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "c7cc2f8d",
+   "id": "f1d9fc90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1314,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "226481b5",
+   "id": "ff42af08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1324,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "91b065e4",
+   "id": "428ec77f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,7 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "74ba8e96",
+   "id": "0a91d16c",
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1358,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "6b5516cb",
+   "id": "8c5715da",
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91687fff",
+   "id": "35abce0c",
    "metadata": {},
    "source": [
     "### Combine two dataset. If a player's rating changed, use the newer one."
@@ -1451,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "b5680f06",
+   "id": "9af42eeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1462,7 +1462,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "57d856fb",
+   "id": "d657b3dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1472,7 +1472,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "aee64c31",
+   "id": "1dddb0f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "740937b7",
+   "id": "6fe235ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "85277121",
+   "id": "66616df4",
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "cb3717d2",
+   "id": "9503483e",
    "metadata": {},
    "outputs": [
     {
@@ -1579,8 +1579,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "92f4980c",
+   "execution_count": 119,
+   "id": "f7f9fc1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating23_combined.reset_index(inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "65e31213",
    "metadata": {},
    "outputs": [],
    "source": [
