Began working on WC2023
Started testing the code for myself and also looking into references of each country participating

--- a/data_cleaning/FIFA _rating_cleaning.ipynb
+++ b/data_cleaning/FIFA _rating_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "id": "2f296fa2",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "739fae6f",
    "metadata": {},
    "outputs": [],
@@ -27,25 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "bfe5a33d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rating23_2 = pd.read_csv('../Datasets/FIFA/FIFA23_rating/rating_23.csv')\n",
-    "rating23 = pd.read_csv('../Datasets/FIFA/FIFA23_rating/rating_23_Feb.csv')\n",
-    "rating22 = pd.read_csv('../Datasets/FIFA/FIFA22_rating/female_players_22.csv')\n",
-    "rating21 = pd.read_csv('../Datasets/FIFA/FIFA22_rating/female_players_21.csv')\n",
-    "rating20 = pd.read_csv('../Datasets/FIFA/FIFA22_rating/female_players_20.csv')\n",
-    "rating19 = pd.read_csv('../Datasets/FIFA/FIFA22_rating/female_players_19.csv')\n",
-    "rating18 = pd.read_csv('../Datasets/FIFA/FIFA22_rating/female_players_18.csv')\n",
-    "rating17 = pd.read_csv('../Datasets/FIFA/FIFA22_rating/female_players_17.csv')\n",
-    "rating16 = pd.read_csv('../Datasets/FIFA/FIFA22_rating/female_players_16.csv')"
+    "rating23 = pd.read_csv('../Datasets/FIFA/FIFA23_rating_combined.csv')\n",
+    "rating22 = pd.read_csv('../Datasets/FIFA/FIFA22_rating_new.csv')\n",
+    "rating21 = pd.read_csv('../Datasets/FIFA/FIFA21_rating_new.csv')\n",
+    "rating20 = pd.read_csv('../Datasets/FIFA/FIFA20_rating_new.csv')\n",
+    "rating19 = pd.read_csv('../Datasets/FIFA/FIFA19_rating_new.csv')\n",
+    "#rating18 = pd.read_csv('../Datasets/FIFA/FIFA22_rating/female_players_18.csv')\n",
+    "#rating17 = pd.read_csv('../Datasets/FIFA/FIFA22_rating/female_players_17.csv')\n",
+    "#rating16 = pd.read_csv('../Datasets/FIFA/FIFA22_rating/female_players_16.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "id": "b652da37",
    "metadata": {},
    "outputs": [],
@@ -63,20 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "id": "96c34d4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "drop_1(rating23_2)\n",
     "drop_1(rating23)\n",
     "drop_1(rating22)\n",
     "drop_1(rating21)\n",
     "drop_1(rating20)\n",
-    "drop_1(rating19)\n",
-    "drop_1(rating18)\n",
-    "drop_1(rating17)\n",
-    "drop_1(rating16)"
+    "drop_1(rating19)"
    ]
   },
   {
@@ -1734,7 +1729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
