--- a/data_cleaning/FIFA _rating_cleaning.ipynb
+++ b/data_cleaning/FIFA _rating_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "id": "2f296fa2",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,14 @@
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "739fae6f",
    "metadata": {},
    "outputs": [],
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "bfe5a33d",
    "metadata": {},
    "outputs": [],
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "b652da37",
    "metadata": {},
    "outputs": [],
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "96c34d4a",
    "metadata": {},
    "outputs": [],
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "8f0c7fd3",
    "metadata": {},
    "outputs": [],
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "f4c2b7c0",
    "metadata": {},
    "outputs": [],
@@ -108,29 +110,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "id": "02939e2a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lorih\\AppData\\Local\\Temp\\ipykernel_166676\\228554067.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  rating23_new['birthdate']=rating23_new.apply(lambda x:x['birthdate'].split()[0], axis=1)\n",
-      "C:\\Users\\lorih\\AppData\\Local\\Temp\\ipykernel_166676\\228554067.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  rating23_new['birthdate'] = rating23_new.apply(lambda x:datetime.strptime(x['birthdate'], '%m/%d/%Y').year, axis =1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rating23_new['birthdate']=rating23_new.apply(lambda x:x['birthdate'].split()[0], axis=1)\n",
     "\n",
@@ -141,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "id": "5e7d7b31",
    "metadata": {},
    "outputs": [
@@ -485,7 +468,7 @@
        "4             27            87  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "id": "448d84cd",
    "metadata": {},
    "outputs": [],
@@ -507,29 +490,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "id": "f25e08a9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lorih\\AppData\\Local\\Temp\\ipykernel_166676\\3048508127.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  rating23_2_new['birthdate']=rating23_2_new.apply(lambda x:x['birthdate'].split()[0], axis=1)\n",
-      "C:\\Users\\lorih\\AppData\\Local\\Temp\\ipykernel_166676\\3048508127.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  rating23_2_new['birthdate'] = rating23_2_new.apply(lambda x:datetime.strptime(x['birthdate'], '%m/%d/%Y').year, axis =1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rating23_2_new = rating23_2[new_col_1]\n",
     "rating23_2_new['birthdate']=rating23_2_new.apply(lambda x:x['birthdate'].split()[0], axis=1)\n",
@@ -543,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "id": "f7058b17",
    "metadata": {},
    "outputs": [
@@ -557,7 +521,7 @@
        "        True,  True,  True,  True,  True])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "id": "98c3c3f6",
    "metadata": {},
    "outputs": [],
@@ -587,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "id": "7752f1a3",
    "metadata": {},
    "outputs": [],
@@ -597,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "id": "15f01ea9",
    "metadata": {},
    "outputs": [],
@@ -615,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "id": "abc6e980",
    "metadata": {},
    "outputs": [],
@@ -625,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "id": "f554c906",
    "metadata": {},
    "outputs": [
@@ -1272,7 +1236,7 @@
        "4            86.0       both  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1283,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "id": "89eb9c02",
    "metadata": {},
    "outputs": [],
@@ -1293,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "id": "7e858e41",
    "metadata": {},
    "outputs": [],
@@ -1303,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "id": "f1d9fc90",
    "metadata": {},
    "outputs": [],
@@ -1313,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 21,
    "id": "ff42af08",
    "metadata": {},
    "outputs": [],
@@ -1323,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 22,
    "id": "428ec77f",
    "metadata": {},
    "outputs": [],
@@ -1333,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 23,
    "id": "0a91d16c",
    "metadata": {},
    "outputs": [
@@ -1346,7 +1310,7 @@
        "Name: action, dtype: int64"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1357,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "id": "8c5715da",
    "metadata": {},
    "outputs": [
@@ -1431,7 +1395,7 @@
        "373     Emily Gielnik   Australia  removed"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1450,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 25,
    "id": "9af42eeb",
    "metadata": {},
    "outputs": [],
@@ -1461,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 26,
    "id": "d657b3dd",
    "metadata": {},
    "outputs": [],
@@ -1471,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 27,
    "id": "1dddb0f8",
    "metadata": {},
    "outputs": [],
@@ -1481,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 28,
    "id": "6fe235ec",
    "metadata": {},
    "outputs": [],
@@ -1491,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 29,
    "id": "66616df4",
    "metadata": {},
    "outputs": [
@@ -1501,7 +1465,7 @@
        "(700, 40)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1512,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 30,
    "id": "9503483e",
    "metadata": {},
    "outputs": [
@@ -1568,7 +1532,7 @@
        "Name: nationality, dtype: int64"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 31,
    "id": "f7f9fc1b",
    "metadata": {},
    "outputs": [],
@@ -1589,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 32,
    "id": "65e31213",
    "metadata": {},
    "outputs": [],
@@ -1599,70 +1563,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "7b9ffba0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rating22_new = rating22[new_col_2]\n",
-    "rating21_new = rating21[new_col_2]\n",
-    "rating20_new = rating20[new_col_2]\n",
-    "rating19_new = rating19[new_col_2]\n",
-    "rating18_new = rating18[new_col_2]\n",
-    "rating17_new = rating17[new_col_2]\n",
-    "rating16_new = rating16[new_col_2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "c01a5e2e",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lorih\\AppData\\Local\\Temp\\ipykernel_68896\\2418996844.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  rating22_new.rename(columns = {'nationality_name':'nationality', 'height_cm':'height', 'weight_kg': 'weight'}, inplace = True)\n",
-      "C:\\Users\\lorih\\AppData\\Local\\Temp\\ipykernel_68896\\2418996844.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  rating21_new.rename(columns = {'nationality_name':'nationality', 'height_cm':'height', 'weight_kg': 'weight'}, inplace = True)\n",
-      "C:\\Users\\lorih\\AppData\\Local\\Temp\\ipykernel_68896\\2418996844.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  rating20_new.rename(columns = {'nationality_name':'nationality', 'height_cm':'height', 'weight_kg': 'weight'}, inplace = True)\n",
-      "C:\\Users\\lorih\\AppData\\Local\\Temp\\ipykernel_68896\\2418996844.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  rating19_new.rename(columns = {'nationality_name':'nationality', 'height_cm':'height', 'weight_kg': 'weight'}, inplace = True)\n",
-      "C:\\Users\\lorih\\AppData\\Local\\Temp\\ipykernel_68896\\2418996844.py:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  rating18_new.rename(columns = {'nationality_name':'nationality', 'height_cm':'height', 'weight_kg': 'weight'}, inplace = True)\n",
-      "C:\\Users\\lorih\\AppData\\Local\\Temp\\ipykernel_68896\\2418996844.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  rating17_new.rename(columns = {'nationality_name':'nationality', 'height_cm':'height', 'weight_kg': 'weight'}, inplace = True)\n",
-      "C:\\Users\\lorih\\AppData\\Local\\Temp\\ipykernel_68896\\2418996844.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  rating16_new.rename(columns = {'nationality_name':'nationality', 'height_cm':'height', 'weight_kg': 'weight'}, inplace = True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rating22_new.rename(columns = {'nationality_name':'nationality', 'height_cm':'height', 'weight_kg': 'weight'}, inplace = True)\n",
     "rating21_new.rename(columns = {'nationality_name':'nationality', 'height_cm':'height', 'weight_kg': 'weight'}, inplace = True)\n",
@@ -1675,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "c54e9891",
    "metadata": {},
    "outputs": [],
