--- a/data_collection/WC_2019.ipynb
+++ b/data_collection/WC_2019.ipynb
@@ -76,6 +76,8 @@
     "        url_match = 'https://fbref.com' + matches[i].select('a')[1].get('href')\n",
     "\n",
     "        get_names(event_stats[match], url_match)\n",
+    "        \n",
+    "        #add delay to void overloading\n",
     "        time.sleep(4)"
    ]
   },
@@ -135,25 +137,6 @@
     "        df = WC_2019_stats[key][tag]\n",
     "        df.to_csv('WC_2019/'+key+'/'+tag+'.csv', index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "id": "9257ee4c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['USA-summary', 'USA-passing', 'USA-pass types', 'USA-defensive actions', 'USA-possession', 'USA-miscellaneous stats', 'Netherlands-summary', 'Netherlands-passing', 'Netherlands-pass types', 'Netherlands-defensive actions', 'Netherlands-possession', 'Netherlands-miscellaneous stats', 'USA keeper_stats', 'Netherlands keeper_stats'])"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
