--- a/EDA/Statsbomb.ipynb
+++ b/EDA/Statsbomb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1b8e8e81",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "3686c27d",
    "metadata": {},
    "outputs": [],
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "8d49ff91",
    "metadata": {},
    "outputs": [],
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "7bef9133",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "07e560ad",
    "metadata": {
     "scrolled": true
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "8437694d",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
        "32                    Greece           0           0           3"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "3f1891dc",
    "metadata": {},
    "outputs": [],
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "id": "516dc97c",
    "metadata": {},
    "outputs": [],
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "a204eeb8",
    "metadata": {},
    "outputs": [
@@ -937,7 +937,7 @@
     "plt.xlabel('Frequency of Appearance')\n",
     "plt.title('Frequency of International Players Appearance in FA Super League')\n",
     "plt.legend()\n",
-    "plt.savefig('../imgs/Statsbomb/Super_country_count.png',bbox_inches='tight')"
+    "plt.savefig('../imgs/Statsbomb/Super_country_count.pdf',bbox_inches='tight')"
    ]
   },
   {
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 35,
    "id": "2c1a496e",
    "metadata": {},
    "outputs": [
@@ -995,7 +995,7 @@
        "682"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 36,
    "id": "62062656",
    "metadata": {},
    "outputs": [],
@@ -1024,12 +1024,12 @@
     "                 color ='grey')\n",
     "    ax.set_title('Frequency of International Players Appearance in '+ league,\n",
     "                 loc ='left')\n",
-    "    plt.savefig('../imgs/Statsbomb/NWSL_country_count.png',bbox_inches='tight')"
+    "    plt.savefig('../imgs/Statsbomb/NWSL_country_count.pdf',bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 37,
    "id": "1ba6616c",
    "metadata": {},
    "outputs": [
